@@ -66,7 +66,7 @@
          "web" : "https://github.com/janeskil1525/Daje-Workflow-Database-Model"
       }
    },
-   "version" : "0.09",
+   "version" : "0.11",
    "x_serialization_backend" : "JSON::PP version 4.16",
    "x_static_install" : 1
 }
